Fix exact-match serving, station feedback, consistent List.of, remove unused import
Agent-Logs-Url: https://github.com/volpinariluca/ProgettoJava/sessions/b99ed57e-9c2a-434a-9178-0c86f13a057f

Co-authored-by: volpinariluca <185291647+volpinariluca@users.noreply.github.com>