@@ -1,7 +1,6 @@
 package unimore.oop.engine;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -10,10 +9,10 @@ public class RecipeFactory {
 
     public static List<String> generateRandomRecipe() {
         return switch (random.nextInt(3)) {
-            case 0 -> new ArrayList<>(Arrays.asList("Meat", "Bread"));
+            case 0 -> new ArrayList<>(List.of("Meat", "Bread"));
             case 1 -> new ArrayList<>(List.of("Meat"));
-            case 2 -> new ArrayList<>(Arrays.asList("Lettuce", "Bread", "Tomato"));
-            // default is required for exhaustive switch expressions; unreachable at runtime
+            case 2 -> new ArrayList<>(List.of("Lettuce", "Bread", "Tomato"));
+            // default required for exhaustive switch expression; unreachable at runtime
             default -> new ArrayList<>(List.of("Meat"));
         };
     }
